go/pkg/training/iks_deployment/user-policies/istio.yaml
# INTEL CONFIDENTIAL
# Copyright (C) 2023 Intel Corporation
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: istio
  namespace: "{- namespace -}"
spec:
  selector: component == 'singleuser-server'
  order: 0
  egress:
    - action: Allow
      destination:
        services:
          name: istiod
          namespace: istio-system
