go/pkg/training/iks_deployment/user-policies/kube-apiserver.yaml
# INTEL CONFIDENTIAL
# Copyright (C) 2023 Intel Corporation
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: kube-apiserver
  namespace: "{- namespace -}"
spec:
  selector: component == 'singleuser-server'
  order: 0
  egress:
    - action: Deny
      destination:
        services:
          name: kubernetes
          namespace: default
